DB내용 일부수정, API개발

--- a/BE/backend/poopkey/src/main/resources/application.properties
+++ b/BE/backend/poopkey/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.datasource.password=ssafy
 
 # mybatis
 mybatis.mapper-locations=mappers/**/*.xml
-mybatis.type-aliases-package=com.project.poopkey.model.dto
+mybatis.type-aliases-package=com.project.poopkey.model.dto, com.project.poopkey.model.render.dto
 
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
-# DB column ???? ??? -> DTO ?? ???
+# DB column snake_case -> DTO camelCase
 mybatis.configuration.map-underscore-to-camel-case=true
 
 
