--- a/BE/backendver2/poopkey/src/main/resources/application.properties
+++ b/BE/backendver2/poopkey/src/main/resources/application.properties
@@ -9,7 +9,15 @@ mybatis.mapper-locations=mappers/**/*.xml
 mybatis.type-aliases-package=com.project.poopkey.application.main.dto, com.project.poopkey.application.render.dto
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
+
+# for netty communication and DB transaction
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=10
+
 # DB column snake_case -> DTO camelCase
 mybatis.configuration.map-underscore-to-camel-case=true
 
 logging.level.root=DEBUG
+
+# netty server
+netty.server.port = 5010
