--- a/BE/backendver2/poopkey/build.gradle
+++ b/BE/backendver2/poopkey/build.gradle
@@ -53,3 +53,10 @@ dependencies {
 	// https://mvnrepository.com/artifact/io.netty/netty-all
 	implementation group: 'io.netty', name: 'netty-all', version: '4.1.24.Final'
 }
+
+// JWT
+dependencies {
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+}
